--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "xd",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.11.0",
+    "emailjs-com": "^3.2.0",
+    "github-markdown-css": "^5.8.1",
+    "marked": "^16.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.1",
+    "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
